Updates from Overleaf

--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -13,7 +13,7 @@
 }
 
 @inproceedings {abel_kurt_modal,
-    author = {Jonathan S. Abel and Kurt James Werner},
+    author = {Jonathan S. Abel and Kurt J. Werner},
     title  = {Distortion and Pitch Processing Using A Modal Reverberator Architecture},
     booktitle = {Proceedings of the 18th International Conference on Digital Audio Effects},
     year      = {2015}
@@ -22,8 +22,7 @@
 @conference{abel2014a,
 	title = {A Modal Architecture for Artificial Reverberation with Application to Room Acoustics Modeling},
 	author = {Abel, Jonathan S. and Coffin, Sean and Spratt, Kyle},
-	booktitle = {Audio Engineering Society Convention 137},
-	month = {Oct},
+	booktitle = {Proceedings of the 137th Audio Engineering Society Convention},
 	year = {2014},
 	url = {http://www.aes.org/e-lib/browse.cfm?elib=17531}
 }
@@ -37,7 +36,7 @@
 }
 
 @inproceedings{travis_cymbals,
-    author = {Travis Skare and Jonathan Abel},
+    author = {Travis Skare and Jonathan S. Abel},
     title = {Real-Time Modal Synthesis of Crash Cymbals with Nonlinear Approximations, Using a GPU},
     booktitle = {Proceedings of the 22nd International Conference on Digital Audio Effects},
     year = {2019}
@@ -46,7 +45,7 @@
 @article{giannoulis2012compressor,
 	title = {Digital Dynamic Range Compressor Design-A Tutorial and Analysis},
 	author = {Giannoulis, Dimitrios and Massberg, Michael and Reiss, Joshua D.},
-	journal = {J. Audio Eng. Soc},
+	journal = {Journal of the Audio Engineering Society},
 	volume = {60},
 	number = {6},
 	pages = {399--408},
@@ -56,13 +55,13 @@
 
 @MISC{phasorfilter,
     author = {Max Mathews and Julius O. Smith III},
-    title = {Methods for Synthesizing Very High Q Parametrically Well Behaved Two Pole Filters},
+    title = {Methods for Synthesizing Very High {Q} Parametrically Well Behaved Two Pole Filters},
     year = {2003}
 }
 
 @article{arbel2017wine,
   title={Wine glass sound excitation by mechanical coupling to plucked strings},
-  author={Arbel, Lior and Schechner, Yoav Y and Amir, Noam},
+  author={Arbel, Lior and Schechner, Yoav Y. and Amir, Noam},
   journal={Applied Acoustics},
   volume={124},
   pages={1--10},
@@ -73,7 +72,7 @@
 @article{courtois2008tuning,
   title={Tuning the pitch of a wine glass by playing with the liquid inside},
   author={Courtois, Matthieu and Guirao, Boris and Fort, Emmanuel},
-  journal={European journal of physics},
+  journal={European Journal of Physics},
   volume={29},
   number={2},
   pages={303},
@@ -93,19 +92,18 @@
 }
 
 @article{apfel1982whispering,
-  title={``Whispering'' waves in a wine glass},
-  author={Apfel, Robert E},
-  journal={The Journal of the Acoustical Society of America},
-  volume={72},
-  number={S1},
-  pages={S106--S106},
-  year={1982},
-  publisher={Acoustical Society of America}
+  title={`{W}hispering' waves in a wine glass},
+  author={Apfel, Robert E.},
+  journal = {American Journal of Physics},
+  volume = {53},
+  number = {11},
+  pages = {1070-1073},
+  year = {1985},
 }
 
 @article{rossing1990wine,
   title={Wine glasses, bell modes, and Lord Rayleigh},
-  author={Rossing, Thomas D},
+  author={Rossing, Thomas D.},
   journal={The Physics Teacher},
   volume={28},
   number={9},
@@ -125,9 +123,16 @@
   publisher={American Association of Physics Teachers}
 }
 
+@inproceedings{sturm2004spectral,
+  title={Spectral Characteristics of the Musical Iced Tea Can},
+  author={Sturm, Bob L. and Pope, Stephen T.},
+  booktitle={Proceedings of the International Computer Music Conference},
+  year={2004}
+}
+
 @article{french1983vino,
   title={In vino veritas: A study of wineglass acoustics},
-  author={French, AP},
+  author={French, Anthony P.},
   journal={American Journal of Physics},
   volume={51},
   number={8},
@@ -138,7 +143,7 @@
 
 @article{piacsek2015glass,
   title={A glass half full: Demonstrations of some surprising effects of fluid loading on the resonance of wine glasses (and other vessels)},
-  author={Piacsek, Andrew A},
+  author={Piacsek, Andrew A.},
   journal={The Journal of the Acoustical Society of America},
   volume={137},
   number={4},
@@ -149,7 +154,7 @@
 
 @article{thines2012wine,
   title={Wine glass resonance experiment and demonstration},
-  author={Thines, Benjamin C},
+  author={Thines, Benjamin C.},
   journal={The Journal of the Acoustical Society of America},
   volume={132},
   number={3},
@@ -166,16 +171,16 @@ year = {2006},
 howpublished = {\url{https://www.acs.psu.edu/drussell/Demos/BeerBottle/beerbottle.html}}
 }
 
-@article{bragg1921world,
+@book{bragg1921world,
   title={The world of Sound},
   author={Bragg, William},
-  journal={Bell and Sons LTD},
+  publisher={Bell and Sons LTD},
   year={1921}
 }
 
 @article{crawford1982hot,
   title={The hot chocolate effect},
-  author={Crawford, Frank S},
+  author={Crawford, Frank S.},
   journal={American Journal of Physics},
   volume={50},
   number={5},
@@ -186,7 +191,7 @@ howpublished = {\url{https://www.acs.psu.edu/drussell/Demos/BeerBottle/beerbottl
 
 @article{morrison2002sound,
   title={Sound of a cup with and without instant coffee},
-  author={Morrison, Andrew and Rossing, Thomas D},
+  author={Morrison, Andrew and Rossing, Thomas D.},
   journal={The Journal of the Acoustical Society of America},
   volume={111},
   number={5},
@@ -197,7 +202,7 @@ howpublished = {\url{https://www.acs.psu.edu/drussell/Demos/BeerBottle/beerbottl
 
 @article{morrison2014acoustics,
   title={Acoustics concepts you can demonstrate with a coffee mug},
-  author={Morrison, Andrew C},
+  author={Morrison, Andrew C.},
   journal={The Journal of the Acoustical Society of America},
   volume={135},
   number={4},
@@ -222,7 +227,7 @@ howpublished = {\url{https://www.acs.psu.edu/drussell/Demos/BeerBottle/beerbottl
 
 @book{qatu2004vibration,
   title={Vibration of laminated shells and plates},
-  author={Qatu, Mohamad Subhi},
+  author={Qatu, Mohamad S.},
   year={2004},
   publisher={Elsevier}
 }
